src/argocd/bootstrap-resources/teslamate/services.yml
apiVersion: v1
kind: Service
metadata:
  name: teslamate
spec:
  selector:
    app.kubernetes.io/name: teslamate
  ports:
  - name: http
    protocol: TCP
    port: 4000
    targetPort: http
