src/argocd/bootstrap-resources/teslamate/ingresses.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teslamate
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`teslamate.ryanb.tv`)
      kind: Rule
      services:
        - name: teslamate
          kind: Service
          port: http
  tls: {}
